# esp32-sensors2metrics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
components/scd4x-wrapper/: CMakeLists.txt  sensirion_i2c_hal.c
main/: CMakeLists.txt  Kconfig.projbuild  bmp.c  bmp.h  idf_component.yml  main.c  sensirion.c  sensirion.h  wifi.c  wifi.h
